// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingSpinner> that renders a circular loading spinner should add classes when props are changed 1`] = `
<svg
  className="LoadingSpinner LoadingSpinner--context_primary LoadingSpinner--hidden"
  style={
    Object {
      "height": 12,
      "width": 12,
    }
  }
  viewBox={
    Array [
      0,
      0,
      44,
      44,
    ]
  }
>
  <circle
    className="LoadingSpinner__path LoadingSpinner__path--context_primary LoadingSpinner__path--hidden"
    cx="22"
    cy="22"
    fill="none"
    r="20"
    strokeWidth="4"
  />
</svg>
`;

exports[`<LoadingSpinner> that renders a circular loading spinner should render a default spinner correctly 1`] = `
<svg
  className="LoadingSpinner LoadingSpinner--context_brand"
  style={null}
  viewBox={
    Array [
      0,
      0,
      44,
      44,
    ]
  }
>
  <circle
    className="LoadingSpinner__path LoadingSpinner__path--context_brand"
    cx="22"
    cy="22"
    fill="none"
    r="20"
    strokeWidth="4"
  />
</svg>
`;
